--- a/dev.env
+++ b/dev.env
@@ -1,3 +1,3 @@
 export FLASK_APP=server.py
 export FLASK_ENV=development
-export DATABASE_DEV_URI=postgresql:///nlpdev
+export DATABASE_DEV_URI=postgresql:///nlptest2
